更改SPI屏测试程序正常运行

--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
@@ -29,7 +29,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">spi_st7735lcd (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td class="label">spi_st7735lcd (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
@@ -38,7 +38,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--uPLL
- (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -47,43 +47,43 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_init_inst
- (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
-<td align = "center">71</td>
+ (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td align = "center">68</td>
 <td align = "center">-</td>
-<td align = "center">152</td>
+<td align = "center">235</td>
 <td align = "center">-</td>
-<td align = "center">1</td>
+<td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--muxcontrol_inst
- (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">10</td>
 <td align = "center">-</td>
-<td align = "center">21</td>
+<td align = "center">12</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_write_inst
- (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">21</td>
 <td align = "center">-</td>
-<td align = "center">32</td>
+<td align = "center">33</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--show_string_number_inst
- (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">21</td>
 <td align = "center">4</td>
-<td align = "center">26</td>
+<td align = "center">25</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_show_char_inst
- (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
 <td align = "center">80</td>
@@ -92,7 +92,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--your_instance_name
- (D:/PXMDownloads/GwFPGAspi_st7735lcd_v2/src/lcd_show_char.v)</td>
+ (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/lcd_show_char.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
