--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
@@ -59,11 +59,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>D:\PXMDownloads\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
+<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>D:\PXMDownloads\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
+<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -71,24 +71,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Version</td>
-<td>V1.9.9 Beta-3</td>
+<td>V1.9.8.05</td>
 </tr>
 <tr>
 <td class="label">Part Number</td>
-<td>GW1N-LV1QN48C6/I5</td>
+<td>GW1NR-LV9QN88PC6/I5</td>
 </tr>
 <tr>
 <td class="label">Device</td>
-<td>GW1N-1</td>
+<td>GW1NR-9C</td>
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Fri Apr 26 16:43:02 2024
+<td>Sat May 11 22:27:26 2024
 </td>
 </tr>
 <tr>
 <td class="label">Legal Announcement</td>
-<td>Copyright (C)2014-2023 Gowin Semiconductor Corporation. All rights reserved.</td>
+<td>Copyright (C)2014-2022 Gowin Semiconductor Corporation. All rights reserved.</td>
 </tr>
 </table>
 <h1><a name="Summary">Power Summary</a></h1>
@@ -96,30 +96,34 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>10.538</td>
+<td>27.279</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>5.653</td>
+<td>8.700</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>4.886</td>
+<td>18.579</td>
+</tr>
+<tr>
+<td class="label">Psram Power (mW)</td>
+<td>86.000</td>
 </tr>
 </table>
 <h2><a name="Thermal_Info">Thermal Information:</a></h2>
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.442</td>
+<td>25.590</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
-<td>40.580</td>
+<td>21.450</td>
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.558</td>
+<td>84.410</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -188,30 +192,30 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>3.399</td>
-<td>1.584</td>
-<td>5.979</td>
+<td>12.558</td>
+<td>1.994</td>
+<td>17.463</td>
 </tr>
 <tr>
-<td>VCCIO12</td>
-<td>1.200</td>
-<td>0.008</td>
-<td>0.089</td>
-<td>0.117</td>
+<td>VCCX</td>
+<td>2.500</td>
+<td>0.628</td>
+<td>2.424</td>
+<td>7.630</td>
 </tr>
 <tr>
-<td>VCCIO18</td>
+<td>VCCO18</td>
 <td>1.800</td>
-<td>0.022</td>
-<td>0.170</td>
-<td>0.345</td>
+<td>0.086</td>
+<td>0.013</td>
+<td>0.178</td>
 </tr>
 <tr>
-<td>VCCIO33</td>
+<td>VCCO33</td>
 <td>3.300</td>
-<td>0.118</td>
-<td>0.553</td>
-<td>2.213</td>
+<td>0.541</td>
+<td>0.068</td>
+<td>2.008</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -225,25 +229,25 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.132</td>
+<td>0.603</td>
 <td>NA</td>
-<td>12.500</td>
+<td>50.000</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>3.519
-<td>2.535
-<td>11.056
+<td>4.807
+<td>0.544
+<td>50.000
 </tr>
 <tr>
 <td>BSRAM</td>
-<td>0.977
+<td>2.534
 <td>NA</td>
 <td>NA</td>
 </tr>
 <tr>
 <td>PLL</td>
-<td>2.789
+<td>11.158
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -257,36 +261,36 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>spi_st7735lcd</td>
-<td>3.898</td>
-<td>3.898(3.898)</td>
+<td>14.295</td>
+<td>14.295(14.294)</td>
 <tr>
 <td>spi_st7735lcd/lcd_init_inst/</td>
-<td>0.393</td>
-<td>0.393(0.000)</td>
+<td>0.285</td>
+<td>0.285(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_show_char_inst/</td>
-<td>0.680</td>
-<td>0.680(0.634)</td>
+<td>2.719</td>
+<td>2.719(2.534)</td>
 <tr>
 <td>spi_st7735lcd/lcd_show_char_inst/your_instance_name/</td>
-<td>0.634</td>
-<td>0.634(0.000)</td>
+<td>2.534</td>
+<td>2.534(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_write_inst/</td>
-<td>0.011</td>
-<td>0.011(0.000)</td>
+<td>0.047</td>
+<td>0.047(0.000)</td>
 <tr>
 <td>spi_st7735lcd/muxcontrol_inst/</td>
-<td>0.007</td>
-<td>0.007(0.000)</td>
+<td>0.018</td>
+<td>0.018(0.000)</td>
 <tr>
 <td>spi_st7735lcd/show_string_number_inst/</td>
-<td>0.017</td>
-<td>0.017(0.000)</td>
+<td>0.068</td>
+<td>0.068(0.000)</td>
 <tr>
 <td>spi_st7735lcd/uPLL/</td>
-<td>2.789</td>
-<td>2.789(0.000)</td>
+<td>11.158</td>
+<td>11.158(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -297,13 +301,13 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>100.000</td>
-<td>1.112</td>
+<td>400.000</td>
+<td>3.159</td>
 </tr>
 <tr>
 <td>xtal_clk</td>
-<td>12.000</td>
-<td>2.789</td>
+<td>100.000</td>
+<td>11.158</td>
 </tr>
 </table>
 </div><!-- content -->
