音频测试模块

--- a/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn.rpt.html
+++ b/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn.rpt.html
@@ -55,10 +55,10 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYPD_Decoder.v<br>
-F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\gowin_rpll.v<br>
+<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
+F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYPD_Decoder.v<br>
 F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYPD_Top.v<br>
-F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
+F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br>
 </td>
 </tr>
 <tr>
@@ -79,7 +79,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 13 13:49:12 2024
+<td>Thu May 16 18:07:23 2024
 </td>
 </tr>
 <tr>
@@ -95,11 +95,11 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.14s, Elapsed time = 0h 0m 0.137s, Peak memory usage = 201.691MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.003s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 201.691MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 201.691MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.003s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 201.691MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.453s, Elapsed time = 0h 0m 0.464s, Peak memory usage = 213.047MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.015s, Peak memory usage = 213.047MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.012s, Peak memory usage = 213.047MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.078s, Elapsed time = 0h 0m 0.087s, Peak memory usage = 216.133MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 216.133MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.003s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.421s, Elapsed time = 0h 0m 0.454s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.016s, Peak memory usage = 216.133MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.006s, Peak memory usage = 216.133MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 0.623s, Elapsed time = 0h 0m 0.643s, Peak memory usage = 213.047MB</td>
+<td>CPU time = 0h 0m 0.529s, Elapsed time = 0h 0m 0.577s, Peak memory usage = 216.133MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -236,57 +236,57 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <tr>
 <td>xtal_clk</td>
 <td>Base</td>
-<td>10.000</td>
-<td>100.0</td>
+<td>40.000</td>
+<td>25.0</td>
 <td>0.000</td>
-<td>5.000</td>
+<td>20.000</td>
 <td> </td>
 <td> </td>
 <td>xtal_clk_ibuf/I </td>
 </tr>
 <tr>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>Generated</td>
-<td>2.500</td>
-<td>400.0</td>
+<td>10.000</td>
+<td>100.0</td>
 <td>0.000</td>
-<td>1.250</td>
-<td>xtal_clk_ibuf/I</td>
-<td>xtal_clk</td>
-<td>uPLL/rpll_inst/CLKOUT </td>
-</tr>
-<tr>
-<td>uPLL/rpll_inst/CLKOUTP.default_gen_clk</td>
-<td>Generated</td>
-<td>2.500</td>
-<td>400.0</td>
-<td>0.000</td>
-<td>1.250</td>
-<td>xtal_clk_ibuf/I</td>
-<td>xtal_clk</td>
-<td>uPLL/rpll_inst/CLKOUTP </td>
-</tr>
-<tr>
-<td>uPLL/rpll_inst/CLKOUTD.default_gen_clk</td>
-<td>Generated</td>
 <td>5.000</td>
-<td>200.0</td>
-<td>0.000</td>
-<td>2.500</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
-<td>uPLL/rpll_inst/CLKOUTD </td>
+<td>rPLL_init/rpll_inst/CLKOUT </td>
 </tr>
 <tr>
-<td>uPLL/rpll_inst/CLKOUTD3.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUTP.default_gen_clk</td>
 <td>Generated</td>
-<td>7.500</td>
-<td>133.3</td>
+<td>10.000</td>
+<td>100.0</td>
 <td>0.000</td>
-<td>3.750</td>
+<td>5.000</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
-<td>uPLL/rpll_inst/CLKOUTD3 </td>
+<td>rPLL_init/rpll_inst/CLKOUTP </td>
+</tr>
+<tr>
+<td>rPLL_init/rpll_inst/CLKOUTD.default_gen_clk</td>
+<td>Generated</td>
+<td>20.000</td>
+<td>50.0</td>
+<td>0.000</td>
+<td>10.000</td>
+<td>xtal_clk_ibuf/I</td>
+<td>xtal_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUTD </td>
+</tr>
+<tr>
+<td>rPLL_init/rpll_inst/CLKOUTD3.default_gen_clk</td>
+<td>Generated</td>
+<td>30.000</td>
+<td>33.3</td>
+<td>0.000</td>
+<td>15.000</td>
+<td>xtal_clk_ibuf/I</td>
+<td>xtal_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUTD3 </td>
 </tr>
 </table>
 <h2><a name="performance">Max Frequency Summary:</a></h2>
@@ -301,8 +301,8 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td>1</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>400.0(MHz)</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>100.0(MHz)</td>
 <td>94.9(MHz)</td>
 <td>7</td>
 <td>TOP</td>
@@ -314,7 +314,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-8.035</td>
+<td>-0.535</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -322,7 +322,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.721</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -334,11 +334,11 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Launch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 <tr>
 <td class="label">Latch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 </table>
 <b>Data Arrival Path:</b>
@@ -357,7 +357,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
 <td>1.758</td>
@@ -365,7 +365,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
 <td>2.121</td>
@@ -499,23 +499,23 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>10.000</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.758</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.121</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -523,7 +523,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>Decoder/DecodeOut_0_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.721</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -539,7 +539,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>10.000</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -558,7 +558,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-7.968</td>
+<td>-0.468</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -566,7 +566,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.721</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -578,11 +578,11 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Launch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 <tr>
 <td class="label">Latch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 </table>
 <b>Data Arrival Path:</b>
@@ -601,7 +601,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
 <td>1.758</td>
@@ -609,7 +609,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
 <td>2.121</td>
@@ -743,23 +743,23 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>10.000</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.758</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.121</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -767,7 +767,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>Decoder/DecodeOut_2_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.721</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -783,7 +783,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>10.000</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -802,7 +802,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-6.456</td>
+<td>1.044</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -810,7 +810,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.721</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -822,11 +822,11 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Launch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 <tr>
 <td class="label">Latch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 </table>
 <b>Data Arrival Path:</b>
@@ -845,7 +845,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
 <td>1.758</td>
@@ -853,7 +853,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
 <td>2.121</td>
@@ -971,23 +971,23 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>10.000</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.758</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.121</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -995,7 +995,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>Decoder/DecodeOut_1_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.721</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1011,7 +1011,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>10.000</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -1030,7 +1030,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-5.706</td>
+<td>1.794</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -1038,7 +1038,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.721</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -1050,11 +1050,11 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Launch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 <tr>
 <td class="label">Latch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 </table>
 <b>Data Arrival Path:</b>
@@ -1073,7 +1073,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
 <td>1.758</td>
@@ -1081,7 +1081,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
 <td>2.121</td>
@@ -1199,23 +1199,23 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>10.000</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.758</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.121</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -1223,7 +1223,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>Decoder/sclk_11_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.721</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1239,7 +1239,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>10.000</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -1258,7 +1258,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-5.653</td>
+<td>1.847</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -1266,7 +1266,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.721</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -1278,11 +1278,11 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Launch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 <tr>
 <td class="label">Latch Clk</td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk[R]</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk[R]</td>
 </tr>
 </table>
 <b>Data Arrival Path:</b>
@@ -1301,7 +1301,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
 <td>1.758</td>
@@ -1309,7 +1309,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
 <td>2.121</td>
@@ -1427,23 +1427,23 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>10.000</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
 <td> </td>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.758</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
 <td>33</td>
-<td>uPLL/rpll_inst/CLKOUT</td>
+<td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.121</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -1451,7 +1451,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 <td>Decoder/sclk_16_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.721</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1467,7 +1467,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>10.000</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
