--- a/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn_resource.html
+++ b/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn_resource.html
@@ -37,7 +37,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 <td align = "center">-</td>
 </tr>
-<td class="label">&nbsp&nbsp&nbsp&nbsp|--uPLL
+<td class="label">&nbsp&nbsp&nbsp&nbsp|--rPLL_init
  (F:/workspace/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
