--- a/samples/PmodKYP_test/impl/pnr/PmodKYP_test.power.html
+++ b/samples/PmodKYP_test/impl/pnr/PmodKYP_test.power.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 13 15:10:20 2024
+<td>Thu May 16 18:07:26 2024
 </td>
 </tr>
 <tr>
@@ -96,15 +96,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>24.128</td>
+<td>12.555</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>8.703</td>
+<td>8.699</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>15.424</td>
+<td>3.856</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.522</td>
+<td>25.273</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.478</td>
+<td>84.727</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,30 +192,30 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>10.164</td>
-<td>2.027</td>
-<td>14.629</td>
+<td>2.541</td>
+<td>2.023</td>
+<td>5.477</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.761</td>
+<td>0.190</td>
 <td>2.424</td>
-<td>7.964</td>
+<td>6.536</td>
 </tr>
 <tr>
 <td>VCCO12</td>
 <td>1.200</td>
-<td>0.070</td>
+<td>0.018</td>
 <td>0.003</td>
-<td>0.087</td>
+<td>0.024</td>
 </tr>
 <tr>
 <td>VCCO18</td>
 <td>1.800</td>
-<td>0.689</td>
+<td>0.172</td>
 <td>0.115</td>
-<td>1.447</td>
+<td>0.517</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -229,19 +229,19 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.104</td>
+<td>0.026</td>
 <td>NA</td>
-<td>47.500</td>
+<td>11.875</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>4.791
+<td>1.686
 <td>0.650
-<td>53.125
+<td>13.281
 </tr>
 <tr>
 <td>PLL</td>
-<td>11.158
+<td>2.789
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -255,20 +255,20 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>PmodKYPD_Top</td>
-<td>11.262</td>
-<td>11.262(11.262)</td>
+<td>2.815</td>
+<td>2.815(2.815)</td>
 <tr>
 <td>PmodKYPD_Top/Decoder/</td>
-<td>0.097</td>
-<td>0.097(0.000)</td>
+<td>0.024</td>
+<td>0.024(0.000)</td>
 <tr>
 <td>PmodKYPD_Top/LShow/</td>
-<td>0.007</td>
-<td>0.007(0.000)</td>
+<td>0.002</td>
+<td>0.002(0.000)</td>
 <tr>
-<td>PmodKYPD_Top/uPLL/</td>
-<td>11.158</td>
-<td>11.158(0.000)</td>
+<td>PmodKYPD_Top/rPLL_init/</td>
+<td>2.789</td>
+<td>2.789(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -278,9 +278,9 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <th class="label">Total Dynamic Power(mW)</th>
 </tr>
 <tr>
-<td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>400.000</td>
-<td>0.126</td>
+<td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
+<td>100.000</td>
+<td>0.031</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
@@ -289,8 +289,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>xtal_clk</td>
-<td>100.000</td>
-<td>11.158</td>
+<td>25.000</td>
+<td>2.789</td>
 </tr>
 </table>
 </div><!-- content -->
