--- a/samples/PmodKYP_test/impl/pnr/PmodKYP_test.rpt.html
+++ b/samples/PmodKYP_test/impl/pnr/PmodKYP_test.rpt.html
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 13 15:10:20 2024
+<td>Thu May 16 18:07:26 2024
 </td>
 </tr>
 <tr>
@@ -93,23 +93,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.004s, Elapsed time = 0h 0m 0.005s
-   Placement Phase 1: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.062s
-   Placement Phase 2: CPU time = 0h 0m 0.002s, Elapsed time = 0h 0m 0.001s
-   Placement Phase 3: CPU time = 0h 0m 0.778s, Elapsed time = 0h 0m 0.778s
-   Total Placement: CPU time = 0h 0m 0.846s, Elapsed time = 0h 0m 0.846s
+   Placement Phase 0: CPU time = 0h 0m 0.004s, Elapsed time = 0h 0m 0.004s
+   Placement Phase 1: CPU time = 0h 0m 0.063s, Elapsed time = 0h 0m 0.062s
+   Placement Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s
+   Placement Phase 3: CPU time = 0h 0m 0.684s, Elapsed time = 0h 0m 0.684s
+   Total Placement: CPU time = 0h 0m 0.751s, Elapsed time = 0h 0m 0.751s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Routing Phase 1: CPU time = 0h 0m 0.138s, Elapsed time = 0h 0m 0.138s
-   Routing Phase 2: CPU time = 0h 0m 0.081s, Elapsed time = 0h 0m 0.081s
-   Total Routing: CPU time = 0h 0m 0.219s, Elapsed time = 0h 0m 0.219s
+   Routing Phase 1: CPU time = 0h 0m 0.153s, Elapsed time = 0h 0m 0.151s
+   Routing Phase 2: CPU time = 0h 0m 0.075s, Elapsed time = 0h 0m 0.076s
+   Total Routing: CPU time = 0h 0m 0.228s, Elapsed time = 0h 0m 0.227s
 Generate output files:
    CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 199MB</td>
+<td>CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 216MB</td>
 </tr>
 </table>
 <br/>
@@ -164,7 +164,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>56/4320</td>
+<td>54/4320</td>
 <td>1%</td>
 </tr>
 <tr>
@@ -312,7 +312,7 @@ Generate output files:
 <td><b>Location</b></td>
 </tr>
 <tr>
-<td class="label">clk</td>
+<td class="label">clk_100Mhz</td>
 <td>PRIMARY</td>
 <td> TL BR BL</td>
 </tr>
